<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etLogin"
        android:hint="@string/etlogin"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/etPassword"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etLogin"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btLogin"
        android:text="@string/btLogin"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btRegistration"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btRegistration"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>