<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/etProfLogin"
        android:hint="@string/EtLoginPassword"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etProfPassword"
        android:hint="@string/EtProfPassword"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etProfLogin"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btUpdate"
        android:text="@string/Update"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btExit"
        app:layout_constraintTop_toBottomOf="@id/etProfPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btExit"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/exit"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/btUpdate"
        app:layout_constraintTop_toBottomOf="@+id/etProfPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>